# hashtree

./: .gitignore  Cargo.toml  README.md  bindings_riscv64.go  go.mod  hashtree_abi.nim  hashtree_abi.nimble  hashtree_darwin_arm64.syso  hashtree_linux_amd64.syso  hashtree_linux_arm64.syso  hashtree_linux_riscv64.syso  hashtree_windows_amd64.syso  wrapper_linux_riscv64.s
.github/workflows/: build-syso.yml  sbom-export.yaml  test.yml
src/: Makefile  bench.c  hashtree.c  hashtree.h  sha256_armv8_crypto.S  sha256_armv8_neon_x1.S  sha256_armv8_neon_x4.S  sha256_riscv_crypto.S  sha256_riscv_x1.S  sha256_riscv_zbb_x1.S  sha256_sse_x1.S  test.c
